--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ coverage==7.7.0
 cryptography==44.0.0
 cycler==0.12.1
 defusedxml==0.7.1
+dj-database-url==2.3.0
 Django==4.2.9
 django-allauth==0.55.0
 django-browser-reload==1.18.0
@@ -25,6 +26,7 @@ django-extensions==3.2.3
 django-storages==1.14.4
 django-tailwind==3.8.0
 fonttools==4.56.0
+gunicorn==23.0.0
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.5
@@ -61,6 +63,7 @@ six==1.17.0
 sqlparse==0.5.3
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20241206
+typing_extensions==4.13.1
 tzdata==2025.1
 urllib3==2.3.0
 whitenoise==6.9.0
